# arksh

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  mkdocs.yml
.claude/: settings.local.json
.github/workflows/: ci.yml  pages.yml  release.yml
Formula/: arksh.rb
docs/: arksh-come-shell-di-sistema.md  arksh.1  backlog-implementazione.md  benchmarks-baseline.md  confronto-shell.md  guide-installation.md  guide-plugin-author.md  guide-scripting.md  index.md  manuale-utente.md  parser-dispatch.md  plugin-claude-nl.md  quick-start.md  reference.md  release-checklist.md  release-criteria.md  roadmap-shell-completa.md  scelte-implementative.md  security-backlog.md  sh-mode.md  sintassi-arksh.md  sintassi-oosh.md  studio-cpu-memoria.md  troubleshooting.md  user-manual.md
examples/: arksh-git.conf  arksh.conf  arkshrc  ooshrc
examples/scripts/: 01-filesystem-tour.arksh  01-filesystem-tour.oosh  02-values-blocks-and-extensions.arksh  02-values-blocks-and-extensions.oosh  03-shell-session.arksh  03-shell-session.oosh  04-control-flow.arksh  04-control-flow.oosh  05-shell-functions.oosh  06-classes.oosh  07-case-and-builtins.arksh  07-case-and-builtins.oosh  08-redirections-and-heredoc.arksh  08-redirections-and-heredoc.oosh  09-binary-operators.arksh  09-binary-operators.oosh  10-shell-object-bridge.arksh  10-shell-object-bridge.oosh  11-command-override.arksh  11-command-override.oosh  12-dict-type.arksh  13-matrix-type.arksh
include/arksh/: arena.h  ast.h  executor.h  expand.h  lexer.h  line_editor.h  object.h  parser.h  perf.h  platform.h  plugin.h  prompt.h  shell.h
include/oosh/: ast.h  executor.h  expand.h  lexer.h  line_editor.h  object.h  parser.h  platform.h  plugin.h  prompt.h  shell.h
packaging/winget/: README.md
packaging/winget/manifests/A/Arksh/Arksh/0.1.0/: Arksh.Arksh.installer.yaml  Arksh.Arksh.locale.en-US.yaml  Arksh.Arksh.yaml
plugins/git/: README.md  git_prompt_plugin.c
plugins/point/: point_plugin.c
plugins/sample/: sample_plugin.c
plugins/skeleton/: README.md  skeleton_plugin.c
plugins/trash/: trash_plugin.c
scripts/: generate-cover.sh
src/: arena.c  executor.c  expand.c  lexer.c  line_editor.c  main.c  object.c  parser.c  perf.c  platform.c  plugin.c  prompt.c  shell.c
tests/: count_lines.c  echo_stdin.c  emit_args.c  fuzz_input.c  login_pty_session.c  login_session.c  pause_seconds.c  perf_runner.c  pty_repl.c  smoke_notty.sh  unit_arena.c  unit_executor.c  unit_lexer.c  unit_object.c  unit_parser.c  unit_sh_mode.c
tests/fixtures/arith/: basic.arksh  nested.oosh  quoted.oosh  var.oosh
tests/fixtures/classes/: init-and-inheritance.arksh  init-and-inheritance.oosh  init-inline-isa.arksh  multiple-inheritance.oosh
tests/fixtures/control/: continue-nested.arksh  source-fg.arksh
tests/fixtures/functions/: basic.oosh  builtin-cd-override.oosh  builtin-escape.arksh  builtin-pwd-override.oosh  posix-basic.arksh  posix-positional.arksh  redefine.oosh  return-from-loop.oosh  return.arksh  scope.arksh
tests/fixtures/golden/: assoc-arrays.arksh  base64-stages.arksh  dict-types.arksh  if-sequence.arksh  json-edge-cases.arksh  json-query-transform.arksh  matrix-types.arksh  mixed-shell-and-objects.arksh  numeric-types.arksh  pipeline-chain.arksh  posix-arith-expansion.arksh  posix-flags.arksh  posix-group-subshell.arksh  posix-local-scope.arksh  posix-test-bracket.arksh  reduce-and-block.arksh  shell-metadata.arksh  string-transform.arksh
tests/fixtures/heredoc/: basic.arksh  group-tail.arksh  group-tail.oosh  inline-if.arksh  inline-if.oosh  pipeline.arksh  preserve-blank-and-comment.arksh  preserve-blank-and-comment.oosh  strip-tabs.arksh  subshell-tail.arksh
tests/fixtures/ifs/: custom-ifs.arksh  empty-quoted.arksh  empty-var.arksh  quote-removal.arksh  quoted-no-split.oosh  split-count.oosh  split-first.arksh
tests/fixtures/json/: nested.json
tests/fixtures/login/: global-profile.arksh  user-profile.arksh
tests/fixtures/params/: param-count.arksh  param-expansion.arksh  positional-in-function.arksh  scope-restore.oosh  source-params.arksh
tests/fixtures/posix/: getopts-loop.arksh
tests/fixtures/prompt/: git.conf
tests/fixtures/scope/: command-substitution-rich-state.arksh  function-command-substitution.arksh  function-local-shadow.arksh  function-shift-scope.arksh  local-nameref.arksh  subshell-rich-state.arksh
tests/fixtures/sudo/: mock-sudo.sh  sudo-resolver-cmd.arksh  sudo-resolver-context.arksh  with-sudo-block.arksh
tests/perf/: command-substitution.arksh  function-scope.arksh  json-structured.arksh  object-chain.arksh  object-pipeline.arksh  registry-lookups.arksh  subshell.arksh
tests/plugins/: bad_abi_plugin.c  need_cap_plugin.c
